# Project_ARIES

./: README.md
3D_CAD_Models/: 3D_CAD_Models.Explanation.md  3D_CAD_Models.Explanation.txt
3D_CAD_Models/SolidWorks to URDF/holdassem/: CMakeLists.txt  package.xml
3D_CAD_Models/SolidWorks to URDF/roboassem/: CMakeLists.txt  package.xml
3D_CAD_Models/holdassem/: hbase.SLDASM  holdassem.SLDASM  holder.SLDPRT  stand.SLDPRT
3D_CAD_Models/holdassem/connector/: bottom.SLDPRT  button.SLDPRT  connector assem.SLDASM  top.SLDPRT
3D_CAD_Models/holdassem/mag_gripper/: Microservo horn.SLDPRT  Servo Micro.SLDPRT  mag gripper assem.SLDASM  mag holder.SLDPRT  magnet.SLDPRT  mlink.SLDPRT
3D_CAD_Models/holdassem/mech_gripper/: Microservo horn.SLDPRT  finger.SLDPRT  gear.SLDPRT  link.SLDPRT  mech gripper Assem trial.SLDASM  mech gripper Assem.SLDASM  sgear.SLDPRT
3D_CAD_Models/roboassem/: base.SLDPRT  link1.SLDPRT  link2.SLDPRT  motorb.SLDPRT  motors.SLDPRT  motors_horn.SLDPRT  roboassem.SLDASM  rotate1.SLDPRT  rotate2.SLDPRT
Circuit_Diagram/: ARIES.kicad_prl  ARIES.kicad_pro  ARIES.kicad_sch  Circuit_Diagram.Explanation.md
ros-ws/: ros-ws.Explanation.md  ros-ws.Explanation.txt  ros2.sh
ros-ws/install/: local_setup.sh  setup.sh
ros-ws/log/: latest_build
ros-ws/src/: aries.code-workspace
ros-ws/src/aries/: CMakeLists.txt  package.xml  project_description.txt
ros-ws/src/aries/ard_connect/: ard_connect.ino  ros2_to_arduino_bridge.py  run_sequence.py
ros-ws/src/aries/config/: ardcontroller.yaml  fullcontroller.yaml  holdcontroller.yaml  robocontroller.yaml
ros-ws/src/aries/launch/: full_rviz.launch.py  holdassem_rviz.launch.py  roboassem_rviz.launch.py
ros-ws/src/aries/meshes/holdassem/: link.STL  magnet.STL  mbutton1.STL  mconnector.STL  sgear.STL  slink.STL
ros-ws/src/aries/meshes/roboassem/: base.STL  link1.STL  link2.STL  rotate1.STL
ros-ws/src/aries/urdf/: full.xacro  holdassem.urdf  roboassem.csv  roboassem.urdf
ros-ws/src/aries/worlds/: holdassem.rviz  roboassem.rviz
ros-ws/src/moveit2/: .setup_assistant  package.xml
(+125 files in other folders)
